--- a/src/main/resources/fxml/myAccount.fxml
+++ b/src/main/resources/fxml/myAccount.fxml
@@ -22,7 +22,7 @@
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button layoutX="12.0" layoutY="118.0" mnemonicParsing="false" prefWidth="125.0" text="New Trade">
+            <Button layoutX="12.0" layoutY="118.0" mnemonicParsing="false" onAction="#newTrade" prefWidth="125.0" text="New Trade">
                <font>
                   <Font size="14.0" />
                </font>
