--- a/src/main/resources/fxml/newTrade.fxml
+++ b/src/main/resources/fxml/newTrade.fxml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="280.0" prefWidth="191.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="280.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.dialog.NewTradeDialogController">
    <children>
-      <Button layoutX="140.0" layoutY="249.0" mnemonicParsing="false" text="Done" />
-      <Button layoutX="80.0" layoutY="249.0" mnemonicParsing="false" text="Cancel" />
-      <ChoiceBox fx:id="unit" layoutX="12.0" layoutY="15.0" prefHeight="26.0" prefWidth="169.0" />
-      <Label layoutX="12.0" layoutY="45.0" text="Available Credits: " />
+      <Button fx:id="listButton" layoutX="218.0" layoutY="249.0" mnemonicParsing="false" onAction="#listTrade" text="List Trade" />
+      <Button fx:id="cancelButton" layoutX="14.0" layoutY="249.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
+      <Label fx:id="creditsQuantityLabel" layoutX="14.0" layoutY="138.0" />
+      <ComboBox fx:id="unitComboBox" layoutX="119.0" layoutY="14.0" onMouseClicked="#populateUnitComboBox" prefWidth="150.0" />
+      <ComboBox fx:id="tradeTypeComboBox" layoutX="119.0" layoutY="54.0" onMouseClicked="#populateTradeTypeComboBox" prefWidth="150.0" promptText=" " />
+      <ComboBox fx:id="assetComboBox" layoutX="119.0" layoutY="94.0" onAction="#setCreditsQuantityLabel" onMouseClicked="#populateAssetComboBox" prefWidth="150.0" />
+      <TextField fx:id="quantityTextField" layoutX="69.0" layoutY="168.0" promptText="Enter Quantity..." />
+      <TextField fx:id="priceTextField" layoutX="69.0" layoutY="208.0" promptText="Enter Price..." />
+      <Label layoutX="14.0" layoutY="18.0" text="Select Unit:" />
+      <Label layoutX="14.0" layoutY="58.0" text="Select Trade Type:" />
+      <Label layoutX="14.0" layoutY="98.0" text="Select Asset:" />
    </children>
 </AnchorPane>
