--- a/src/main/resources/fxml/myAccount.fxml
+++ b/src/main/resources/fxml/myAccount.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,7 +9,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.MyAccountController">
    <left>
-      <AnchorPane fx:id="anchorPane" blendMode="DARKEN" prefHeight="400.0" prefWidth="150.0" BorderPane.alignment="CENTER">
+      <AnchorPane blendMode="DARKEN" prefHeight="400.0" prefWidth="150.0" BorderPane.alignment="CENTER">
          <children>
             <Button layoutX="12.0" layoutY="14.0" mnemonicParsing="false" onAction="#allTrades" prefWidth="125.0" text="All Trades">
                <font>
@@ -23,11 +22,6 @@
                </font>
             </Button>
             <Button layoutX="12.0" layoutY="118.0" mnemonicParsing="false" onAction="#newTrade" prefWidth="125.0" text="New Trade">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
-            <Button layoutX="13.0" layoutY="320.0" mnemonicParsing="false" prefWidth="125.0" text="My Account">
                <font>
                   <Font size="14.0" />
                </font>
@@ -63,35 +57,59 @@
    <center>
       <AnchorPane prefHeight="400.0" prefWidth="450.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="14.0" layoutY="243.0" text="Change Password">
+            <Label layoutX="14.0" layoutY="261.0" text="Change Your Password">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <PasswordField fx:id="currentPasswordField" layoutX="14.0" layoutY="284.0" promptText="Current Password" />
-            <PasswordField fx:id="newPasswordField" layoutX="14.0" layoutY="318.0" promptText="New Password" />
-            <Button layoutX="61.0" layoutY="349.0" mnemonicParsing="false" onAction="#changePassword" text="Update" />
-            <Label layoutX="14.0" layoutY="14.0" text="My Account">
+            <PasswordField fx:id="currentPasswordField" layoutX="63.0" layoutY="301.0" promptText="Current Password" />
+            <PasswordField fx:id="newPasswordField" layoutX="63.0" layoutY="331.0" promptText="New Password" />
+            <Button layoutX="105.0" layoutY="361.0" mnemonicParsing="false" onAction="#changePassword" text="Update" />
+            <Label fx:id="welcomeMessageLabel" layoutX="14.0" layoutY="14.0" text="Welcome, username!">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label fx:id="usernameLabel" layoutX="14.0" layoutY="49.0" text="Username: ">
+            <Label layoutX="14.0" layoutY="74.0" text="Welcome to the Electronic Asset Trading Platform. Here you can  ">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="accountTypeLabel" layoutX="14.0" layoutY="69.0" text="Account Type:">
+            <Label layoutX="14.0" layoutY="94.0">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="89.0" text="My Units:">
+            <Label layoutX="14.0" layoutY="94.0" text="perform numerous inter-unit operations such as:">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <ComboBox fx:id="unitsComboBox" layoutX="14.0" layoutY="109.0" prefWidth="150.0" />
+            <Label layoutX="14.0" layoutY="124.0" text="- Viewing all active trades">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="144.0" text="- Viewing all fulfilled trades">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="164.0" text="- Viewing your units trades">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="184.0" text="- Removing trades from your units">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="204.0" text="- Listing trades for your units">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </center>
