--- a/src/main/resources/fxml/newTrade.fxml
+++ b/src/main/resources/fxml/newTrade.fxml
@@ -1,23 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="280.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.dialog.NewTradeDialogController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="435.0" prefWidth="375.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.dialog.NewTradeDialogController">
    <children>
-      <Button fx:id="listButton" layoutX="218.0" layoutY="249.0" mnemonicParsing="false" onAction="#listTrade" text="List Trade" />
-      <Button fx:id="cancelButton" layoutX="14.0" layoutY="249.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
-      <Label fx:id="creditsQuantityLabel" layoutX="14.0" layoutY="138.0" />
-      <ComboBox fx:id="unitComboBox" layoutX="119.0" layoutY="14.0" onMouseClicked="#populateUnitComboBox" prefWidth="150.0" />
-      <ComboBox fx:id="tradeTypeComboBox" layoutX="119.0" layoutY="54.0" onMouseClicked="#populateTradeTypeComboBox" prefWidth="150.0" promptText=" " />
-      <ComboBox fx:id="assetComboBox" layoutX="119.0" layoutY="94.0" onAction="#setCreditsQuantityLabel" onMouseClicked="#populateAssetComboBox" prefWidth="150.0" />
-      <TextField fx:id="quantityTextField" layoutX="69.0" layoutY="168.0" promptText="Enter Quantity..." />
-      <TextField fx:id="priceTextField" layoutX="69.0" layoutY="208.0" promptText="Enter Price..." />
-      <Label layoutX="14.0" layoutY="18.0" text="Select Unit:" />
-      <Label layoutX="14.0" layoutY="58.0" text="Select Trade Type:" />
-      <Label layoutX="14.0" layoutY="98.0" text="Select Asset:" />
+      <Button fx:id="listButton" layoutX="283.0" layoutY="391.0" mnemonicParsing="false" onAction="#listTrade" text="List Trade" />
+      <Button fx:id="cancelButton" layoutX="218.0" layoutY="391.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
+      <Label fx:id="creditsQuantityLabel" layoutX="197.0" layoutY="261.0" />
+      <ComboBox fx:id="unitComboBox" layoutX="24.0" layoutY="256.0" onMouseClicked="#populateUnitComboBox" prefWidth="150.0" promptText="Select Unit" />
+      <ComboBox fx:id="tradeTypeComboBox" layoutX="24.0" layoutY="296.0" onMouseClicked="#populateTradeTypeComboBox" prefWidth="150.0" promptText="Buy or Sell" />
+      <ComboBox fx:id="assetComboBox" layoutX="24.0" layoutY="338.0" onAction="#updateDisplays" onMouseClicked="#populateAssetComboBox" prefWidth="150.0" promptText="Select Asset" />
+      <TextField fx:id="quantityTextField" layoutX="194.0" layoutY="296.0" promptText="Enter Quantity..." />
+      <TextField fx:id="priceTextField" layoutX="194.0" layoutY="336.0" prefHeight="27.0" prefWidth="160.0" promptText="Enter Price..." />
+      <LineChart fx:id="historyLineChart" layoutX="25.0" layoutY="33.0" prefHeight="212.0" prefWidth="319.0">
+        <xAxis>
+          <NumberAxis fx:id="xAxis" side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis fx:id="yAxis" side="LEFT" />
+        </yAxis>
+      </LineChart>
+      <Label fx:id="headerLabel" layoutX="93.0" layoutY="14.0" text="Select an asset to view its price history" />
    </children>
 </AnchorPane>
