--- a/src/main/resources/fxml/manageUnits.fxml
+++ b/src/main/resources/fxml/manageUnits.fxml
@@ -21,7 +21,7 @@
       <Label layoutX="15.0" layoutY="14.0" text="Select Unit" />
       <Button fx:id="removeAssetButton" disable="true" layoutX="518.0" layoutY="362.0" mnemonicParsing="false" onAction="#removeAsset" text="Remove" />
       <Button layoutX="15.0" layoutY="362.0" mnemonicParsing="false" onAction="#goBack" text="&lt;&lt; Back" />
-      <ComboBox fx:id="allAssetsComboBox" disable="true" layoutX="256.0" layoutY="362.0" prefHeight="26.0" prefWidth="98.0" promptText="Asset" />
+      <ComboBox fx:id="allAssetsComboBox" disable="true" layoutX="256.0" layoutY="362.0" onMouseClicked="#populateAssetComboBox" prefHeight="26.0" prefWidth="98.0" promptText="Asset" />
       <Button fx:id="addAssetButton" disable="true" layoutX="437.0" layoutY="362.0" mnemonicParsing="false" onAction="#addAsset" text="Add" />
       <TextField fx:id="addAssetTextField" disable="true" layoutX="361.0" layoutY="362.0" prefHeight="26.0" prefWidth="70.0" promptText="Qty" />
       <Separator layoutX="15.0" layoutY="250.0" prefHeight="4.0" prefWidth="213.0" />
