--- a/src/main/resources/fxml/landing.fxml
+++ b/src/main/resources/fxml/landing.fxml
@@ -16,12 +16,12 @@
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" layoutX="12.0" layoutY="83.0" mnemonicParsing="false" onAction="#unitTrades" prefWidth="125.0" text="My Unit's Trades">
+            <Button fx:id="unitTrades" alignment="CENTER" layoutX="12.0" layoutY="83.0" mnemonicParsing="false" onAction="#unitTrades" prefWidth="125.0" text="My Unit's Trades">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button layoutX="12.0" layoutY="118.0" mnemonicParsing="false" onAction="#newTrade" prefWidth="125.0" text="New Trade">
+            <Button fx:id="newTrade" layoutX="12.0" layoutY="118.0" mnemonicParsing="false" onAction="#newTrade" prefWidth="125.0" text="New Trade">
                <font>
                   <Font size="14.0" />
                </font>
